# Kurs4_job

./: main.py  pyproject.toml
src/: class_api.py  class_mylist.py  class_save_csv.py  class_save_json.py  class_saver.py  class_userinput.py  class_vacancy.py  classes_api.py
