[tool.poetry]
name = "kurs4-job"
version = "0.1.0"
description = ""
authors = ["Denis Prusakov <Denikpr@gmail.com>"]
readme = "README.md"
packages = [{include = "kurs4_job"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
