[tool.poetry]
name = "kurs4-job"
version = "0.1.0"
description = ""
authors = ["Denis Prusakov <Denikpr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
workbook = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
